[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/TabContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainWindow/Forms/FileDialogButton.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MainWindow/Forms/CreateSceneButton.gd" type="Script" id=4]

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1593.0
margin_bottom = 893.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1586.0
margin_bottom = 886.0
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 2 )

[node name="Welcome" type="Tabs" parent="PanelContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/TabContainer/Welcome"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]


[b]Elementery Cellular Automaton Art Generator[/b]

For introduction on ECA, see this [url=https://en.wikipedia.org/wiki/Elementary_cellular_automaton]Wikipedia article[/url].

To create a new image, click the arrow in the top right corner. After choosing the image parameters, a new tab will be opened with a blank canvas. You can then select a predefined rule in the dropdown selector on the lefthand side, or choose your own colors for the automaton. The color rules are in the order usually used for ECA, which is \"111\" to \"000\".

You can pause generation of the automaton, increase the speed of generation, or adjust the threshold which is used to decide whether a cell is alive or not.

You can also pan the image using the mouse, and scroll using the mouse wheel or by pressing [code]Z[/code] and [code]X[/code].

The image can then be exported using the \"Export\" button or discarded by pressing [code]D[/code].

[img=400x400]res://Assets/icon2.png[/img]

[/center]"
text = "


Elementery Cellular Automaton Art Generator

For introduction on ECA, see this Wikipedia article.

To create a new image, click the arrow in the top right corner. After choosing the image parameters, a new tab will be opened with a blank canvas. You can then select a predefined rule in the dropdown selector on the lefthand side, or choose your own colors for the automaton. The color rules are in the order usually used for ECA, which is \"111\" to \"000\".

You can pause generation of the automaton, increase the speed of generation, or adjust the threshold which is used to decide whether a cell is alive or not.

You can also pan the image using the mouse, and scroll using the mouse wheel or by pressing Z and X.

The image can then be exported using the \"Export\" button or discarded by pressing D.



"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -1232.0
margin_bottom = -654.0
rect_min_size = Vector2( 350, 200 )
popup_exclusive = true
window_title = "New Canvas"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer"]
margin_right = 340.0
margin_bottom = 166.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Labels"]
margin_top = 8.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_vertical = 6
text = "Name"

[node name="SizeX" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Labels"]
margin_top = 42.0
margin_right = 74.0
margin_bottom = 56.0
size_flags_vertical = 6
text = "Width"

[node name="SizeY" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Labels"]
margin_top = 76.0
margin_right = 74.0
margin_bottom = 90.0
size_flags_vertical = 6
text = "Height"

[node name="Background" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Labels"]
margin_top = 110.0
margin_right = 74.0
margin_bottom = 124.0
size_flags_vertical = 6
text = "Background"

[node name="Path" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Labels"]
margin_top = 144.0
margin_right = 74.0
margin_bottom = 158.0
size_flags_vertical = 6
text = "Path"

[node name="Form" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 340.0
margin_bottom = 166.0
size_flags_horizontal = 3

[node name="NameForm" type="LineEdit" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_right = 262.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WidthForm" type="SpinBox" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_top = 34.0
margin_right = 262.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 100.0
max_value = 16384.0
value = 600.0

[node name="HeightForm" type="SpinBox" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_top = 68.0
margin_right = 262.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 100.0
max_value = 16384.0
value = 600.0

[node name="ColorPicker" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_top = 102.0
margin_right = 262.0
margin_bottom = 132.0
size_flags_vertical = 3

[node name="FileDialogButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_top = 136.0
margin_right = 262.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true
script = ExtResource( 3 )

[node name="FileDialog" type="FileDialog" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form"]
margin_top = 108.0
margin_right = 416.0
margin_bottom = 292.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
resizable = true
dialog_hide_on_ok = true
access = 2
current_dir = "/Users/lukashejcman/Documents/Development/ECAArt"
current_path = "/Users/lukashejcman/Documents/Development/ECAArt/"

[node name="CreateSceneButton" type="Button" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer"]
margin_top = 170.0
margin_right = 340.0
margin_bottom = 190.0
text = "Create"
script = ExtResource( 4 )

[node name="WarningDialog" type="AcceptDialog" parent="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/CreateSceneButton"]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "Incomplete information!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_selected" from="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form/FileDialog" to="PanelContainer/VBoxContainer/TabContainer/WindowDialog/VBoxContainer/HBoxContainer/Form/FileDialogButton" method="_on_FileDialog_file_selected"]
